--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Select your favourite product" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <main>
@@ -18,7 +19,9 @@
         <img />
       </section>
       <div>View Results</div>
-      <ul></ul>
+      <div>
+        <canvas id="chart"></canvas>
+      </div>
     </main>
     <script src="scrpt.js"></script>
   </body>
