--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <meta name="description" content="Select your favourite product" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
   </head>
   <body>
     <main>
-      <img id="siteLogo" src="" alt="logo" />
       <h1>Odd Duck's Product Selector</h1>
       <section>
-        <img />
-        <img />
+        <img id="image1" />
+        <img id="image2" />
+        <img id="image3" />
       </section>
       <div>View Results</div>
+      <ul></ul>
       <div>
         <canvas id="chart"></canvas>
       </div>
